[package]
name = "headless-wss"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"

[lib]
name = "headless_wss"
path = "lib.rs"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt", "net"] }
tokio-rustls = "0.23"
tokio-tungstenite = "0.17"
webpki-roots = "0.22"
rustls-pemfile = "0.2"
