[package]
name = "headless-wss"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"

[lib]
name = "headless_wss"
path = "lib.rs"

[dependencies]
futures = "0.3"
tokio = "1"
tokio-rustls = "0.23"
tokio-tungstenite = { version = "0.17", default-features = false }
webpki-roots = { version = "0.22", optional = true }
rustls-pemfile = { version = "1.0", optional = true }

[features]
client-tls-helper = ["webpki-roots"]
server-tls-helper = ["rustls-pemfile"]

[[example]]
name = "client"
required-features = ["client-tls-helper"]

[[example]]
name = "server"
required-features = ["server-tls-helper"]

[dev-dependencies]
argh = "0.1"
tokio = { version = "1", features = ["full"] }
